@@ -1,3 +1,12 @@
+2003-08-04  URABE Shyouhei  <shyouhei@YahooBB218133008108.bbtec.net>
+
+	* timidity/timidity.c: Some option renamed
+	  --auto-volume-compensation -> --[no-]volume-compensation
+	  --config                   -> --config-file
+	  --keysig                   -> --force-keysig
+	  --key                      -> --adjust-key
+	  --[no-]recomposer-dll      -> --[no-]-rcpcv-dll
+
 2003-08-04  TAMUKI Shoichi <tamuki@linet.gr.jp>
 
 	* timidity/timidity.c: Fix typo again
